@@ -663,89 +663,6 @@ class ActionWizard(ModelSQL, ModelView):
 ActionWizard()
 
 
-class ActionWizardSize(ModelSQL, ModelView):
-    "Action Wizard Size"
-    _name = 'ir.action.wizard_size'
-    _description = __doc__
-    wizard = fields.Char('Wizard', required=True, select=1)
-    model = fields.Char('Model', required=True, select=1)
-    user = fields.Many2One('res.user', 'User', required=True,
-            ondelete='CASCADE', select=1)
-    width = fields.Integer('Width')
-    height = fields.Integer('Height')
-
-    def __init__(self):
-        super(ActionWizardSize, self).__init__()
-        self._rpc.update({
-            'set_size': True,
-        })
-
-    def create(self, vals):
-        res = super(ActionWizardSize, self).create(vals)
-        # Restart the cache for get_size
-        self.get_size.reset()
-        return res
-
-    def write(self, ids, vals):
-        res = super(ActionWizardSize, self).write(ids, vals)
-        # Restart the cache for get_size
-        self.get_size.reset()
-        return res
-
-    def delete(self, ids):
-        res = super(ActionWizardSize, self).delete(ids)
-        # Restart the cache for get_size
-        self.get_size.reset()
-        return res
-
-    def set_size(self, wizard, model, width, height):
-        '''
-        Set size for wizard dialog.
-        :param wizard: the wizard name
-        :param model: the model name
-        :param width: the width
-        :param height: the height
-        '''
-        ids = self.search([
-            ('user', '=', Transaction().user),
-            ('wizard', '=', wizard),
-            ('model', '=', model),
-            ])
-        if ids:
-            self.write(ids, {
-                'width': width,
-                'height': height,
-                })
-        else:
-            self.create({
-                'wizard': wizard,
-                'model': model,
-                'user': Transaction().user,
-                'width': width,
-                'height': height,
-                })
-
-    @Cache('ir.action.wizard_size.get_size')
-    def get_size(self, wizard, model):
-        '''
-        Get size for wizard dialog.
-        :param wizard: the wizard name
-        :param model: the model name
-        :return: (width, height)
-        '''
-        ids = self.search([
-            ('user', '=', Transaction().user),
-            ('wizard', '=', wizard),
-            ('model', '=', model),
-            ], limit=1)
-        if ids:
-            wizard_size = self.browse(ids[0])
-            return wizard_size.width, wizard_size.height
-        return (0, 0)
-
-ActionWizardSize()
-
-
 class ActionURL(ModelSQL, ModelView):
     "Action URL"
     _name = 'ir.action.url'
